# HECGridder

./: .gitignore  CMakeLists.txt  README  experiments.sh  gpu.h  gridder.c  gridder.h  run.sh
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
nbproject/private/: configurations.xml  private.xml  timestamps-156.62.73.131-ubuntu-22  timestamps-156.62.73.99-ubuntu-22
